[gd_scene load_steps=11 format=3 uid="uid://yxlxc6l7o32m"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_fdndw"]
[ext_resource type="Texture2D" uid="uid://dk8xsbshmv6wv" path="res://graphics/player/player.png" id="1_owpkt"]
[ext_resource type="Texture2D" uid="uid://bx8m6lf76kb3u" path="res://graphics/decals/white.png" id="3_hhxwd"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_rn6jj"]
polygon = PackedVector2Array(2, -60, 11, -59, 23, -61, 30, -57, 34, -50, 41, -43, 45, -34, 52, -27, 64, -23, 70, -15, 78, -9, 90, -10, 97, -5, 108, -2, 114, 2, 123, 4, 129, 7, 133, 13, 134, 27, 131, 32, 121, 35, 109, 33, 100, 40, 96, 50, 78, 51, 59, 51, 59, 41, 48, 39, 27, 44, 12, 52, -3, 58, -25, 56, -36, 45, -51, 26, -54, 10, -59, -2, -59, -23, -52, -35, -42, -47, -30, -48, -20, -58, -2, -59)

[sub_resource type="CircleShape2D" id="CircleShape2D_jlpl8"]
radius = 67.0075

[sub_resource type="Gradient" id="Gradient_8u7d5"]
colors = PackedColorArray(1, 1, 1, 1, 0.459407, 0.742954, 1, 0.458824)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_tbesa"]
gradient = SubResource("Gradient_8u7d5")

[sub_resource type="Curve" id="Curve_ddxc8"]
max_value = 100.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.0866667, 95.6044), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_l8rdw"]
curve = SubResource("Curve_ddxc8")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uvgp4"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 11.07
spread = 38.933
initial_velocity_min = 272.11
initial_velocity_max = 272.11
angular_velocity_max = 98.88
gravity = Vector3(0, 0, 0)
damping_min = 1.0
damping_max = 8.865
damping_curve = SubResource("CurveTexture_l8rdw")
scale_min = 0.3
color = Color(0.118268, 0.998785, 0.999999, 1)
color_ramp = SubResource("GradientTexture1D_tbesa")

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_fdndw")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_rn6jj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jlpl8")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(37, 0)
rotation = 1.5708
texture = ExtResource("1_owpkt")

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeTimer" type="Timer" parent="."]
wait_time = 4.5
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]
position = Vector2(3, 0)

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(125, 19)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(122, 11)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(122, 27)

[node name="LaserParticles" type="GPUParticles2D" parent="."]
position = Vector2(133, 19)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_uvgp4")
texture = ExtResource("3_hhxwd")
lifetime = 0.4
one_shot = true
speed_scale = 2.0

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_grenade_timer_timeout"]
